asteria/core/tests/errors/elaboration_errors/repeated_variables_in_case_clause_pattern.asteriacore
data Pair (a : Type) (b : Type) where
   | MkPair (x : a) (y : b) : Test$Pair(a,b)
   ;;

x : forall {a : Type}. Test$Pair(a,a) -> a
  = case x of
       | MkPair(;x,x) -> x
       ;;
